RESOLVED FIXED52507
Plugins render incorrectly with transformed ancestors
https://bugs.webkit.org/show_bug.cgi?id=52507
Summary Plugins render incorrectly with transformed ancestors
Simon Fraser (smfr)
Reported 2011-01-14 22:18:36 PST
Plugins render incorrectly when there are CSS transforms on their ancestors.
Attachments
Patch (4.50 KB, patch)
2011-01-14 22:38 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2011-01-14 22:19:01 PST
Simon Fraser (smfr)
Comment 2 2011-01-14 22:38:12 PST
mitz
Comment 3 2011-01-14 22:40:53 PST
Comment on attachment 79054 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=79054&action=review > WebKit/mac/Plugins/WebBaseNetscapePluginView.h:145 > +- (NSRect)actualVisibleRectInWindow; // takes page scale into account Does this only work for page scale? What about other scaling and translation?
Simon Fraser (smfr)
Comment 4 2011-01-14 22:49:12 PST
Note You need to log in before you can comment on or make changes to this bug.