2011-01-14  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Plugins render incorrectly with transformed ancestors
        https://bugs.webkit.org/show_bug.cgi?id=52507

        -[NSView visibleRect] gives the wrong answer if there are CSS transforms
        in the ancestor chain of a plugin.

        So use of this method with calls to -actualVisibleRectInWindow, which
        maps rects through the render tree to compute the correct rect,
        clipping via windowClipRect() if necessary.

        Not testable, because doing so relies on the behavior of some
        plugins, which stop rendering if setWindow passes an empty rect.

        * Plugins/Hosted/WebHostedNetscapePluginView.mm:
        (-[WebHostedNetscapePluginView updateAndSetWindow]):
        * Plugins/WebBaseNetscapePluginView.h:
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView actualVisibleRectInWindow]):
        * Plugins/WebNetscapePluginView.mm:
        (-[WebNetscapePluginView saveAndSetNewPortStateForUpdate:]):

Canonical link: https://commits.webkit.org/66128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75873 268f45cc-cd09-0410-ab3c-d52691b4dbfc